--- a/Api/appsettings.Development.json
+++ b/Api/appsettings.Development.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=localhost;Database=DatingApp;Trusted_Connection=True;"
+    "DefaultConnection": "Server=localhost; Port=5432; User Id=appuser; Password=password; Database=datingapp"
   },
   "TokenKey": "super secret unguessable key",
   "Logging": {
