--- a/client/package.json
+++ b/client/package.json
@@ -12,7 +12,7 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "~9.1.9",
-    "@angular/cdk": "^11.2.4",
+    "@angular/cdk": "^11.2.13",
     "@angular/common": "~9.1.9",
     "@angular/compiler": "~9.1.9",
     "@angular/core": "~9.1.9",
@@ -29,9 +29,9 @@
     "ngx-bootstrap": "^6.2.0",
     "ngx-spinner": "^9.0.2",
     "ngx-timeago": "^2.0.0",
-    "ngx-toastr": "^13.2.0",
+    "ngx-toastr": "^13.2.1",
     "rxjs": "~6.5.4",
-    "tslib": "^1.10.0",
+    "tslib": "^1.14.1",
     "zone.js": "~0.10.2"
   },
   "devDependencies": {
@@ -39,8 +39,8 @@
     "@angular/cli": "^9.1.15",
     "@angular/compiler-cli": "~9.1.9",
     "@types/jasmine": "~3.5.0",
-    "@types/jasminewd2": "~2.0.3",
-    "@types/node": "^12.20.4",
+    "@types/jasminewd2": "^2.0.9",
+    "@types/node": "^12.20.13",
     "codelyzer": "^5.1.2",
     "jasmine-core": "~3.5.0",
     "jasmine-spec-reporter": "~4.2.1",
@@ -48,7 +48,7 @@
     "karma-chrome-launcher": "~3.1.0",
     "karma-coverage-istanbul-reporter": "~2.1.0",
     "karma-jasmine": "~3.0.1",
-    "karma-jasmine-html-reporter": "^1.4.2",
+    "karma-jasmine-html-reporter": "^1.6.0",
     "protractor": "~7.0.0",
     "ts-node": "~8.3.0",
     "tslint": "~6.1.0",
